--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -10,5 +10,7 @@ $white: #fff;
 $light: #F8F8F8;
 
 // Font Variables
-$primary-font: 'Muli', sans-serif;
 $icon-font: 'themify';
+
+$title-font: 'Playfair Display', serif;
+$text-font: 'Noto Sans JP', sans-serif;
