--- a/assets/scss/_buttons.scss
+++ b/assets/scss/_buttons.scss
@@ -1,7 +1,7 @@
 /* Button style */
 .btn {
   font-size: 16px;
-  font-family: $primary-font;
+  font-family: $text-font;
   text-transform: capitalize;
   padding: 12px 20px;
   border-radius: 5px;
